[tool.poetry]
name = "iidx-log"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "iidx_log"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
matplotlib = "^3.6.2"
schedule = "^1.1.0"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
requests = "^2.28.1"
scipy = "^1.10.0"
beautifulsoup4 = "^4.11.1"
dash = "^2.7.1"
dash-bootstrap-components = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
